use relative to avoid overlapping with loading

--- a/packages/components/src/FormField/components/ClearAction.css
+++ b/packages/components/src/FormField/components/ClearAction.css
@@ -1,6 +1,6 @@
 .clearInput {
   display: flex;
-  position: absolute;
+  position: relative;
   right: var(--space-small);
   z-index: var(--elevation-tooltip);
   width: var(--space-large);
